syntax = "proto3";

package notification;

option go_package = "github.com/manhrev/runtracking/backend/group/pkg/api;notification";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Notification {
    rpc PushNoti2AllUsers(PushNoti2AllUsersRequest) returns (google.protobuf.Empty){};
    rpc PushNoti2MembersOfGroup(PushNoti2MembersOfGroupRequest) returns (google.protobuf.Empty){};
    rpc PushNoti2User(PushNoti2UserRequest) returns (google.protobuf.Empty) {};
}

message Notify{
    string messeage = 1;
    google.protobuf.Timestamp scheduled_time = 2;
}

message PushNoti2AllUsersRequest{
    Notify notify = 1;
}



message PushNoti2MembersOfGroupRequest{

}



message PushNoti2UserRequest{

}



