syntax = "proto3";

package plan;

option go_package = "github.com/manhrev/runtracking/backend/plan/pkg/api;plan";

import "google/protobuf/timestamp.proto";
import "api/plan.proto";

service PlanI {
    rpc UpdatePlanProgress(UpdatePlanProgressRequest) returns (UpdatePlanProgressReply);
}

message UpdatePlanProgressRequest {
    int64 plan_id = 1;
    int64 increment_value = 2;
    google.protobuf.Timestamp time = 3;
    plan.Rule rule = 4;
}

message UpdatePlanProgressReply {
}